Fix typo and update project description in index.html
Corrected a typo in the about section and updated the project description.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <section id="about" class="about section">
     <div class="container">
       <h3>About Me</h3>
-      <p>Write a short paragraph about yourself — your background, passions, what you bring to the table.</p>
+      <p>Write a short paragraph about yourself — your bacs, what you bring to the table.</p>
       <p>Maybe include skills, technologies you love, and what you’re currently working on.</p>
     </div>
   </section>
@@ -42,7 +42,7 @@
       <div class="work-grid">
         <article class="work-item">
           <h4>Project One</h4>
-          <p>Short description of project one, what you did, what technologies you used.</p>
+          <p>Ni-Co hydroxide based hybrid  super capacitor.</p>
           <a href="#" class="btn">View Project</a>
         </article>
         <article class="work-item">
