Update project link to direct URL

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <article class="work-item">
           <h4>Project One</h4>
           <p>Ni-Co hydroxide based hybrid  super capacitor.</p>
-          <a href="#" class="btn">View Project</a>
+          <a href="https://drive.google.com/drive/u/0/folders/1BiDa0naJ98XIcJjpxailbKidxDfBQXh8" class="btn">View Project</a>
         </article>
         <article class="work-item">
           <h4>Project Two</h4>
