--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header class="site-header">
     <div class="container">
-      <h1 class="site-title">Your Name</h1>
+      <h1 class="site-title">Noushad Ali Malawat</h1>
       <nav class="site-nav">
         <a href="#about">About</a>
         <a href="#work">Work</a>
