Update project section and contact information

--- a/index.html
+++ b/index.html
@@ -36,37 +36,67 @@
     </div>
   </section>
 
-  <section id="work" class="work section">
-    <div class="container">
-      <h3>Selected Work</h3>
-      <div class="work-grid">
-        <article class="work-item">
-          <h4>Project One</h4>
-          <p>Ni-Co hydroxide based hybrid  super capacitor.</p>
-          <a href="https://drive.google.com/drive/u/0/folders/1BiDa0naJ98XIcJjpxailbKidxDfBQXh8" class="btn">View Project</a>
-        </article>
-        <article class="work-item">
-          <h4>Project Two</h4>
-          <p>Short description of project two.</p>
-          <a href="#" class="btn">View Project</a>
-        </article>
-        <!-- add more work‐items as needed -->
-      </div>
+<section id="work" class="work section">
+  <div class="container">
+    <h3>Projects</h3>
+
+    <div class="work-grid">
+
+      <!-- Project 1 -->
+      <article class="work-item">
+        <h4>Vibrational Analysis of SrCO₃ under High Pressure</h4>
+        <p>
+          Bhabha Atomic Research Centre (BARC), Mumbai (2025). Raman spectroscopic
+          investigation of SrCO₃ under high-pressure conditions using diamond
+          anvil cell techniques.
+        </p>
+        <a href="https://drive.google.com/file/d/1pXz04q_6Vi0Rr_Tn871FNS2V0hlhfo_x/view?usp=drive_link"
+           class="btn" target="_blank">
+          View Project Report
+        </a>
+      </article>
+
+      <!-- Project 2 -->
+      <article class="work-item">
+        <h4>Nickel–Cobalt Hydroxide Based Supercapacitor</h4>
+        <p>
+          Indian Institute of Technology Tirupati (2024). Synthesis, XRD
+          characterization, and electrochemical analysis using cyclic voltammetry
+          and galvanostatic charge–discharge.
+        </p>
+        <a href="https://drive.google.com/file/d/1LJvuORPX_KF_Lvg5Km3HrV_w0sMNVqSt/view?usp=drive_link"
+           class="btn" target="_blank">
+          View Project Report
+        </a>
+      </article>
+
+      <!-- Project 3 -->
+      <article class="work-item">
+        <h4>Alcohol-Based Thermometer for Polar Regions</h4>
+        <p>
+          B.K. Birla College, Mumbai University (2024). Designed and calibrated an
+          alcohol-based thermometer suitable for low-temperature polar
+          environments.
+        </p>
+      </article>
+
     </div>
-  </section>
+  </div>
+</section>
+
 
   <section id="contact" class="contact section">
-    <div class="container">
-      <h3>Get In Touch</h3>
-      <p>If you’d like to talk about a project or just say hi, feel free to drop me a line.</p>
-      <a href="mailto:youremail@example.com" class="btn btn-primary">Email Me</a>
-    </div>
-  </section>
+  <div class="container">
+    <h3>Get In Touch</h3>
+    <p>If you’d like to talk about a project or just say hi, feel free to drop me a line.</p>
+    <a href="mailto:sheikhnaushad7240@gmail.com" class="btn btn-primary">Email Me</a>
+  </div>
+</section>
 
-  <footer class="site-footer">
-    <div class="container">
-      <p>© 2025 Your Name. All rights reserved.</p>
-    </div>
-  </footer>
+<footer class="site-footer">
+  <div class="container">
+    <p>© 2025 Noushad Ali Malawat. All rights reserved.</p>
+  </div>
+</footer>
 </body>
 </html>
