--- a/index.html
+++ b/index.html
@@ -29,12 +29,48 @@
   </section>
 
   <section id="about" class="about section">
-    <div class="container">
-      <h3>About Me</h3>
-      <p>Write a short paragraph about yourself — your bacs, what you bring to the table.</p>
-      <p>Maybe include skills, technologies you love, and what you’re currently working on.</p>
-    </div>
-  </section>
+  <div class="container">
+    <h3>About Me</h3>
+
+    <p>
+      Motivated second-year MSc Physics student with a strong interest in
+      experimental physics and hands-on research. Has worked on experimental
+      physics projects and actively participated in academic and curriculum
+      activities.
+    </p>
+
+    <p>
+      Research interests include nuclear physics, experimental physics,
+      solid-state physics, quantum physics, condensed matter physics, and
+      astrophysics. Keen to collaborate on research projects, learn from experts,
+      and apply theoretical knowledge gained during university studies to
+      practical, real-world problems.
+    </p>
+  </div>
+</section>
+
+  <section id="skills" class="skills section">
+  <div class="container">
+    <h3>Skills</h3>
+
+    <ul>
+      <li>Python, Fortran, LaTeX (Overleaf)</li>
+      <li>
+        Raman spectroscopy (high pressure), electrochemical workstation
+        (cyclic voltammetry and galvanostatic charge–discharge),
+        bench-top X-ray diffraction
+      </li>
+      <li>
+        Telescope handling (STAR TRACKER 150/750 EQ reflector),
+        basic electronic instrumentation
+      </li>
+      <li>Origin, PeakFit</li>
+      <li>Good communication, analytic thinking, and team leadership</li>
+      <li>Languages: English, Hindi, Marwari, Urdu</li>
+    </ul>
+  </div>
+</section>
+
 
 <section id="work" class="work section">
   <div class="container">
