Add project on estimating stellar parameters
Added a new project entry for estimating stellar parameters using low-resolution spectra.

--- a/index.html
+++ b/index.html
@@ -94,6 +94,20 @@
 
       <!-- Project 2 -->
       <article class="work-item">
+        <h4>Estimating Stellar Parameters of Bright Stars Using Low-Resolution Spectra</h4>
+        <p>
+          Indian Institute of Astrophysics (IIA), Vainu Bappu Observatory,
+          Kavalur, Tamil Nadu, India. Estimation of stellar parameters from
+          low-resolution spectroscopic observations of bright stars.
+        </p>
+        <a href="https://drive.google.com/file/d/1da0sgPq41IcWy5AG7OWKiS6N90xqMdRj/view?usp=drive_link"
+           class="btn" target="_blank">
+          View Project Report
+        </a>
+      </article>
+
+      <!-- Project 3 -->
+      <article class="work-item">
         <h4>Nickel–Cobalt Hydroxide Based Supercapacitor</h4>
         <p>
           Indian Institute of Technology Tirupati (2024). Synthesis, XRD
@@ -106,7 +120,7 @@
         </a>
       </article>
 
-      <!-- Project 3 -->
+      <!-- Project 4 -->
       <article class="work-item">
         <h4>Alcohol-Based Thermometer for Polar Regions</h4>
         <p>
