Add publications section to index.html
Added a new section for publications with details of a specific publication.

--- a/index.html
+++ b/index.html
@@ -134,6 +134,39 @@
   </div>
 </section>
 
+  <section id="publications" class="publications section">
+  <div class="container">
+    <h3>Publications</h3>
+
+    <article class="publication-item">
+      <h4>
+        Comparative decay analysis of compound nuclei
+        <sup>24–27</sup>Mg* and <sup>244–247</sup>Cm*
+        formed in <sup>12–15</sup>C induced reactions
+      </h4>
+
+      <p class="authors">
+        Navjot Kaur, <strong>Noushad Ali Malawat</strong>,
+        Rupinder Kaur, Sukhjeet Singh, Birbikram Singh
+      </p>
+
+      <p class="journal">
+        <em>Proceedings of the DAE Symposium on Nuclear Physics</em>,
+        Vol. 69 (2026), pp. 491–492
+      </p>
+
+      <a
+        href="https://inspirehep.net/literature/3114410"
+        target="_blank"
+        class="btn"
+      >
+        View on INSPIRE-HEP
+      </a>
+    </article>
+  </div>
+</section>
+
+
 
   <section id="contact" class="contact section">
   <div class="container">
