Add research interests section to index.html
Added a new section for research interests with a list of topics.

--- a/index.html
+++ b/index.html
@@ -64,15 +64,28 @@
     </p>
 
     <p>
-      Research interests include nuclear physics, experimental physics,
-      solid-state physics, quantum physics, condensed matter physics, and
-      astrophysics. Keen to collaborate on research projects, learn from experts,
+      Keen to collaborate on research projects, learn from experts,
       and apply theoretical knowledge gained during university studies to
       practical, real-world problems.
     </p>
   </div>
 </section>
 
+<section id="research" class="research section">
+  <div class="container">
+    <h3>Research Interests</h3>
+    <ul>
+      <li>Experimental nuclear physics</li>
+      <li>Accelerator physics</li>
+      <li>Nuclear structure and decay of compound nuclei</li>
+      <li>Reaction dynamics and statistical models</li>
+      <li>Condensed matter and solid-state physics</li>
+      <li>Astrophysical processes and spectroscopy</li>
+    </ul>
+  </div>
+</section>
+
+  
   <section id="skills" class="skills section">
   <div class="container">
     <h3>Skills</h3>
