Add CV download link to index.html
Added a link to download the CV in the index.html file.

--- a/index.html
+++ b/index.html
@@ -47,8 +47,19 @@
         Google Scholar
       </a>
     </div>
+
+    <div class="cv-link">
+      <a
+        href="Noushad_Ali_Malawat_CV.pdf"
+        target="_blank"
+        class="btn"
+      >
+        Download CV
+      </a>
+    </div>
   </div>
 </section>
+
 
 
 
