--- a/index.html
+++ b/index.html
@@ -216,13 +216,37 @@
 
 
 
-  <section id="contact" class="contact section">
+<section id="contact" class="contact section">
   <div class="container">
-    <h3>Get In Touch</h3>
-    <p>If you’d like to talk about a project or just say hi, feel free to drop me a line.</p>
-    <a href="mailto:sheikhnaushad7240@gmail.com" class="btn btn-primary">Email Me</a>
+    <h3>Contact</h3>
+
+    <p>
+      Email:
+      <a href="mailto:sheikhnaushad7240@gmail.com">
+        sheikhnaushad7240@gmail.com
+      </a>
+    </p>
+
+    <p>
+      Email:
+      <a href="mailto:24msphypy0047@pondiuni.ac.in">
+        24msphypy0047@pondiuni.ac.in
+      </a>
+    </p>
+
+    <p>
+      LinkedIn:
+      <a
+        href="https://www.linkedin.com/in/noushad-ali-malawat"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        linkedin.com/in/noushad-ali-malawat
+      </a>
+    </p>
   </div>
 </section>
+
 
 <footer class="site-footer">
   <div class="container">
