--- a/index.html
+++ b/index.html
@@ -63,24 +63,38 @@
 
 
 
-  <section id="about" class="about section">
+<section id="about" class="about section">
   <div class="container">
     <h3>About Me</h3>
 
     <p>
-      Motivated second-year MSc Physics student with a strong interest in
-      experimental physics and hands-on research. Has worked on experimental
-      physics projects and actively participated in academic and curriculum
-      activities.
+      I am a second-year MSc Physics student at Pondicherry University with a
+      strong focus on experimental nuclear physics and accelerator-related
+      studies. My research experience includes experimental and data-analysis–
+      driven projects across nuclear physics, spectroscopy, and materials
+      characterization.
     </p>
 
     <p>
-      Keen to collaborate on research projects, learn from experts,
-      and apply theoretical knowledge gained during university studies to
-      practical, real-world problems.
+      I am a co-author of a conference paper published in the Proceedings of the
+      DAE Symposium on Nuclear Physics (Vol. 69, 2026), where I worked on the
+      comparative decay analysis of light and heavy compound nuclei using
+      theoretical models and statistical interpretation. This work strengthened
+      my interest in nuclear structure, reaction dynamics, and the physics of
+      compound nuclear systems.
+    </p>
+
+    <p>
+      I have carried out experimental research at Bhabha Atomic Research Centre
+      (BARC), the Indian Institute of Astrophysics, and IIT Tirupati, gaining
+      hands-on experience in high-pressure Raman spectroscopy, spectroscopic
+      data analysis, X-ray diffraction, and electrochemical measurements. I am
+      now seeking PhD opportunities where I can further develop as an
+      experimental researcher in nuclear and accelerator physics.
     </p>
   </div>
 </section>
+
 
 <section id="research" class="research section">
   <div class="container">
